SERVER-11251 Make sure that ssl is enabled when sslFIPSMode is specified